// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutIs should render the component 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="title is-1"
    >
      This is the About Page
    </h1>
    <p>
      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis consequat nulla ac ex consequat, in efficitur arcu congue. Nam fermentum commodo egestas.
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContactUs should render the Component 1`] = `
<DocumentFragment>
  <h1>
    Contact Us
  </h1>
</DocumentFragment>
`;

exports[`Error should render the component 1`] = `
<DocumentFragment>
  <h1>
    Page not found!
  </h1>
</DocumentFragment>
`;

exports[`Login should render the component 1`] = `
<DocumentFragment>
  <h1>
    Login
  </h1>
</DocumentFragment>
`;
